# fennec

./: .gitignore  Cargo.toml  README.md  dictionary.yaml.example  notebook.yaml  watch.sh
resources/: glyph-base  glyph-base.kra  glyph-scaled.kra  tunic-dungeonfont-16x32.kra  tunic-dungeonfont-64x64.kra  tunic-dungeonfont.kra  tunic_glyphs.pxo
resources/segments/: bottom-left.png~  bottom-middle.png~  lower-far-left.png~  lower-middle.png~  lower-near-left.png~  lower-near-right.png~
resources/somepx-02/: somepx-02.txt
resources/somepx-04/: somepx-04.txt
src/: cursors.rs  editors.rs  fennec_state.rs  files.rs  gui.rs  language.rs  main.rs  renderers.rs  views.rs  visibility.rs
src/editors/: events.rs  file_editors.rs  glyph_editors.rs  notebook_editors.rs  snippet_editors.rs  word_editors.rs
src/editors/word_editors/: english_word_editors.rs  tunic_word_editors.rs
src/language/: dictionary.rs  glyphs.rs  notebook.rs  notebooks.rs  snippets.rs  words.rs
src/renderers/: file_editor_renderers.rs  glyph_map_renderers.rs  notebook_editor_renderers.rs  snippet_editor_renderers.rs  snippet_source_renderers.rs
templates/: definitions.html.hbs  index.html.hbs  snippets.html.hbs
