[package]
name = "fennec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = "~0.8"
clap = { version = "4.0.29", features = ["derive"] }
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
serde_yaml = "~0.9"

[lib]
name = "fennec"
path = "src/main.rs"

[[bin]]
name = "add-snippet"
path = "src/bin/add-snippet.rs"

[[bin]]
name = "fennec"
path = "src/bin/fennec.rs"
