[package]
name = "fennec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = "~0.8"
clap = { version = "4.1.4", features = ["derive"] }
colored = "~2.0.0"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
serde_yaml = "~0.9"
rocket = "0.5.0-rc.2"
bevy = { version = "0.9", features=["jpeg"] }
bevy_egui = "0.19"
bevy_prototype_lyon = "0.7.2"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["handlebars", "tera"]

[lib]
name = "fennec"
path = "src/main.rs"

[[bin]]
name = "add-snippet"
path = "src/bin/add-snippet.rs"

[[bin]]
name = "fennec"
path = "src/bin/fennec.rs"

[[bin]]
name = "search"
path = "src/bin/search.rs"

[[bin]]
name = "define"
path = "src/bin/define.rs"
